# duckdb-sorted-set

./: CMakeLists.txt  Makefile  README.md  extension_config.cmake
src/: set_search_core.cpp  sorted_set_extension.cpp
src/include/: set_search_core.hpp  sorted_set_extension.hpp  sorted_set_type.hpp
test/sql/: sorted_set.test
